--- a/app/src/main/res/layout/add_bazar_fragment.xml
+++ b/app/src/main/res/layout/add_bazar_fragment.xml
@@ -16,6 +16,7 @@
             android:layout_height="wrap_content"></Spinner>
     </LinearLayout>
     <EditText
+        android:editable="false"
         android:gravity="center"
         android:id="@+id/dateCostET"
         android:hint="Date"
