--- a/app/src/main/res/layout/overview_fragment_layout.xml
+++ b/app/src/main/res/layout/overview_fragment_layout.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/mainCostTV"
         android:textColor="@android:color/black"
         android:textSize="50sp"
         android:layout_width="wrap_content"
