--- a/app/src/main/res/menu/activity_landing_page_drawer.xml
+++ b/app/src/main/res/menu/activity_landing_page_drawer.xml
@@ -25,19 +25,27 @@
             <item
                 android:id="@+id/bazar_summary"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Bazar Summary" />
+                android:title="Current Month's Bazar Summary" />
             <item
                 android:id="@+id/meal_summary"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Meal Summary" />
+                android:title="Current Month's Meal Summary" />
             <item
                 android:id="@+id/current_month_summary"
                 android:icon="@drawable/ic_menu_send"
                 android:title="Current Month's Summary" />
             <item
-                android:id="@+id/sendd"
+                android:id="@+id/individual_bazar_summary"
                 android:icon="@drawable/ic_menu_send"
-                android:title="" />
+                android:title="Individual Bazar" />
+            <item
+                android:id="@+id/individual_meal_summary"
+                android:icon="@drawable/ic_menu_send"
+                android:title="Individual Meal" />
+            <item
+                android:id="@+id/previous_month_summary"
+                android:icon="@drawable/ic_menu_send"
+                android:title="Previous Month's Summary" />
         </menu>
     </item>
 
